# Codder_Buddy_Agentitc_AI

./: .gitignore  README.md  git_auto_sync.py
Coder Buddy Project/: README.md  main.py  pyproject.toml
Coder Buddy Project/Projects/full_stack_customer_feedback_board_20260616_024219/: DEPLOY.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
Coder Buddy Project/Projects/full_stack_database_explorer_dashboard_20260615_191911/: README.md
Coder Buddy Project/Projects/galgotias_university_static_landing_page_20260616_044455/: README.md  index.html
Coder Buddy Project/Projects/leetcode_premium_client_side_dashboard_20260615_134541/: Readme.md  index.html  script.js  style.css
Coder Buddy Project/Projects/ranking_application_development_20260615_150818/: README.md  Technical_Design.md  database.py  main.py  models.py  ranking_algorithm.py  schemas.py
Coder Buddy Project/Projects/simple_scientific_calculator_20260616_034102/: README.md
Coder Buddy Project/agent/: Best Prompts.md  Tech Used  graph.py  test_new_features.py
Coder Buddy Project/agent/architect/: __init__.py  agent.py  models.py  prompts.py
Coder Buddy Project/agent/coder/: __init__.py  agent.py  models.py  prompts.py
Coder Buddy Project/agent/config/: __init__.py  settings.py
Coder Buddy Project/agent/database/: test_db_integration.py
Coder Buddy Project/agent/llm/: __init__.py  client.py
Coder Buddy Project/agent/models/: __init__.py  schemas.py
Coder Buddy Project/agent/planner/: __init__.py  agent.py  models.py  prompts.py
Coder Buddy Project/agent/prompts/: __init__.py  (+1 more)
(+60 files in other folders)
